--- a/templates/user-designed-query/Set-udq-dates.html
+++ b/templates/user-designed-query/Set-udq-dates.html
@@ -99,7 +99,7 @@
       </fieldset>
     </div>
 
-    <a class="nhsuk-button nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="choose-dictionary.html">
+    <a class="nhsuk-button nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="new-query-summary-page.html">
       Continue
     </a>
 
