--- a/templates/user-designed-query/add-search-criteria-attribute.html
+++ b/templates/user-designed-query/add-search-criteria-attribute.html
@@ -22,38 +22,50 @@
 
     <div class="nhsuk-do-dont-list">
       <h3 class="nhsuk-do-dont-list__label">Search criteria view</h3>
-    <table class="nhsuk-table">
-      <caption class="nhsuk-table__caption"></caption>
-      <thead role="rowgroup" class="nhsuk-table__head">
-      <tr role="row">
-        <th role="columnheader" class="" scope="col">
-          Level
-        </th>
-        <th role="columnheader" class="" scope="col">
-          Attribute
-        </th>
-        <th role="columnheader" class="" scope="col">
-          Qualifier(Operator)
-        </th>
-        <th role="columnheader" class="" scope="col">
-          Criteria
-        </th>
-        <th role="columnheader" class="" scope="col">
-          Action
-        </th>
-      </tr>
-      </thead>
-      <tbody class="nhsuk-table__body">
-      <tr role="row" class="nhsuk-table__row">
-        <td class="nhsuk-table__cell">VPM</td>
-        <td class="nhsuk-table__cell ">Name</td>
-        <td class="nhsuk-table__cell ">Equal to</td>
-        <td class="nhsuk-table__cell ">A, </td>
-        <!--this edit will take the user to the start of the edit journey  -->
-        <td class="nhsuk-table__cell "><a href="edit-dictionary.html">Edit</a></td>
-      </tr>
-      </tbody>
-    </table>
+      <table class="nhsuk-table">
+        <caption class="nhsuk-table__caption"></caption>
+        <thead role="rowgroup" class="nhsuk-table__head">
+        <tr role="row">
+          <th role="columnheader" class="" scope="col">
+            Level
+          </th>
+          <th role="columnheader" class="" scope="col">
+            Attribute
+          </th>
+          <th role="columnheader" class="" scope="col">
+            Qualifier(Operator)
+          </th>
+          <th role="columnheader" class="" scope="col">
+            Criteria
+          </th>
+          <th role="columnheader" class="" scope="col">
+            Between/starts between
+          </th>
+          <th role="columnheader" class="" scope="col">
+            Start date
+          </th>
+          <th role="columnheader" class="" scope="col">
+            End date </th>
+
+          <th role="columnheader" class="" scope="col">
+            Action
+          </th>
+        </tr>
+        </thead>
+        <tbody class="nhsuk-table__body">
+        <tr role="row" class="nhsuk-table__row">
+          <td class="nhsuk-table__cell">VPM</td>
+          <td class="nhsuk-table__cell ">Name</td>
+          <td class="nhsuk-table__cell ">Equal to</td>
+          <td class="nhsuk-table__cell ">%Sulphate</td>
+          <td class="nhsuk-table__cell ">Between</td>
+          <td class="nhsuk-table__cell ">01 January 2015</td>
+          <td class="nhsuk-table__cell ">31 December 2015</td>
+          <!--this edit will take the user to the start of the edit journey  -->
+          <td class="nhsuk-table__cell "><a href="edit-dictionary.html">Edit</a></td>
+        </tr>
+        </tbody>
+      </table>
 </div>
 
     <div class="nhsuk-grid-row">
