--- a/templates/user-designed-query/add-set-criteria-level.html
+++ b/templates/user-designed-query/add-set-criteria-level.html
@@ -39,6 +39,15 @@
           Criteria
         </th>
         <th role="columnheader" class="" scope="col">
+          Between/starts between
+        </th>
+        <th role="columnheader" class="" scope="col">
+          Start date
+        </th>
+        <th role="columnheader" class="" scope="col">
+          End date </th>
+
+        <th role="columnheader" class="" scope="col">
           Action
           </th>
       </tr>
@@ -48,7 +57,10 @@
         <td class="nhsuk-table__cell">VPM</td>
         <td class="nhsuk-table__cell ">Name</td>
         <td class="nhsuk-table__cell ">Equal to</td>
-        <td class="nhsuk-table__cell ">A%</td>
+        <td class="nhsuk-table__cell ">%Sulphate</td>
+        <td class="nhsuk-table__cell ">Between</td>
+        <td class="nhsuk-table__cell ">01 January 2015</td>
+        <td class="nhsuk-table__cell ">31 December 2015</td>
 <!--this edit will take the user to the start of the edit journey  -->
         <td class="nhsuk-table__cell "><a href="edit-dictionary.html">Edit</a></td>
       </tr>
