--- a/templates/user-designed-query/edit-search-criteria-query.html
+++ b/templates/user-designed-query/edit-search-criteria-query.html
@@ -23,7 +23,7 @@
     <div class="nhsuk-inset-text">
       <span class="nhsuk-u-visually-hidden">Information: </span>
 
-      <p>You can delete<a href="cancel-new-query-confirmation.html" title="External website"> this search criteria</a>.</p>
+      <p>You can delete<a href="confirm-delete-search-criteria.html" title="External website"> this search criteria</a>.</p>
     </div>
 
 
@@ -101,7 +101,56 @@
               </a>
 
             </dd>
+          </div>
 
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Between?Starts between
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              Between
+            </dd>
+
+            <dd class="nhsuk-summary-list__actions">
+
+              <a href="edit-search-criteria.html">
+                Edit<span class="nhsuk-u-visually-hidden">Edit</span>
+              </a>
+
+            </dd>
+          </div>
+
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Start date
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              1 January 2015
+            </dd>
+
+            <dd class="nhsuk-summary-list__actions">
+
+              <a href="edit-start-date.html">
+                Edit<span class="nhsuk-u-visually-hidden">Edit</span>
+              </a>
+
+            </dd>
+          </div>
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+             End date
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+             15 December 2015
+            </dd>
+
+            <dd class="nhsuk-summary-list__actions">
+
+              <a href="edit-search-criteria.html">
+                Edit<span class="nhsuk-u-visually-hidden">Edit</span>
+              </a>
+
+            </dd>
           </div>
 
         </dl>
