--- a/templates/user-designed-query/home-page.html
+++ b/templates/user-designed-query/home-page.html
@@ -36,7 +36,7 @@
       <div class="nhsuk-card nhsuk-card--clickable">
         <div class="nhsuk-card__content">
           <h5 class="nhsuk-card__heading nhsuk-heading-xs">
-            <a class="nhsuk-card__link" href="tab-download">Saved querys </a>
+            <a class="nhsuk-card__link" href="saved-udq-name.html">Saved querys </a>
           </h5>
 
         </div>
