--- a/templates/user-designed-query/save-query-add-note.html
+++ b/templates/user-designed-query/save-query-add-note.html
@@ -20,13 +20,47 @@
         Add save query note
       </h1>
     </legend>
-
-    <div class="nhsuk-inset-text">
-      <span class="nhsuk-u-visually-hidden">Information: </span>
-
-      <p>Your user ID (Cipher) and today's date will be saved automatically by default </p>
+    <div class="nhsuk-warning-callout">
+      <h3 class="nhsuk-warning-callout__label">
+    <span role="text">
+      <span class="nhsuk-u-visually-hidden">Important: </span>
+      Default settings
+    </span>
+      </h3>
+      <p>Your user ID (Cipher) and today's date will be saved automatically by default. </p>
+      <p>Your UDQ will be kept private unless you choose to share it.</p>
     </div>
+<!--    <div class="nhsuk-inset-text">-->
+<!--      <span class="nhsuk-u-visually-hidden">Information: </span>-->
 
+<!--      <p>Your user ID (Cipher) and today's date will be saved automatically by default </p>-->
+<!--    </div>-->
+    <div class="nhsuk-form-group">
+
+      <fieldset class="nhsuk-fieldset" aria-describedby="example-hint">
+        <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
+          <h1 class="nhsuk-fieldset__heading">
+            Share query
+          </h1>
+        </legend>
+
+        <div class="nhsuk-hint" id="example-hint">
+          You can choose to share this query with others from your team
+        </div>
+
+        <div class="nhsuk-checkboxes">
+
+          <div class="nhsuk-checkboxes__item">
+            <input class="nhsuk-checkboxes__input" id="example-1" name="example" type="checkbox" value="email">
+            <label class="nhsuk-label nhsuk-checkboxes__label" for="example-1">
+              Share
+            </label>
+          </div>
+
+        </div>
+      </fieldset>
+
+    </div>
     <div class="nhsuk-form-group">
       <h2 class="nhsuk-label-wrapper">
         <label class="nhsuk-label nhsuk-label--l" for="more-detail">
