--- a/templates/user-designed-query/add-display-attribute.html
+++ b/templates/user-designed-query/add-display-attribute.html
@@ -39,6 +39,15 @@
             Criteria
           </th>
           <th role="columnheader" class="" scope="col">
+            Between/starts between
+          </th>
+          <th role="columnheader" class="" scope="col">
+            Start date
+          </th>
+          <th role="columnheader" class="" scope="col">
+            End date </th>
+
+          <th role="columnheader" class="" scope="col">
             Action
           </th>
         </tr>
@@ -46,9 +55,12 @@
         <tbody class="nhsuk-table__body">
         <tr role="row" class="nhsuk-table__row">
           <td class="nhsuk-table__cell">VPM</td>
-          <td class="nhsuk-table__cell ">Dictionary</td>
+          <td class="nhsuk-table__cell ">Name</td>
           <td class="nhsuk-table__cell ">Equal to</td>
-          <td class="nhsuk-table__cell ">PCDD</td>
+          <td class="nhsuk-table__cell ">%Sulphate</td>
+          <td class="nhsuk-table__cell ">Between</td>
+          <td class="nhsuk-table__cell ">01 January 2015</td>
+          <td class="nhsuk-table__cell ">31 December 2015</td>
           <!--this edit will take the user to the start of the edit journey  -->
           <td class="nhsuk-table__cell "><a href="edit-dictionary.html">Edit</a></td>
         </tr>
@@ -57,6 +69,10 @@
           <td class="nhsuk-table__cell ">Invalid status</td>
           <td class="nhsuk-table__cell ">Equal to</td>
           <td class="nhsuk-table__cell ">Valid</td>
+          <td class="nhsuk-table__cell ">
+          </td>
+          <td class="nhsuk-table__cell "></td>
+          <td class="nhsuk-table__cell "></td>
           <!--this edit will take the user to the start of the edit journey  -->
           <td class="nhsuk-table__cell "><a href="edit-dictionary.html">Edit</a></td>
         </tr>
