--- a/templates/user-designed-query/add-query-date.html
+++ b/templates/user-designed-query/add-query-date.html
@@ -40,6 +40,15 @@
             Criteria
           </th>
           <th role="columnheader" class="" scope="col">
+            Between/starts between
+          </th>
+          <th role="columnheader" class="" scope="col">
+            Start date
+          </th>
+          <th role="columnheader" class="" scope="col">
+            End date </th>
+
+          <th role="columnheader" class="" scope="col">
             Action
           </th>
         </tr>
@@ -47,9 +56,12 @@
         <tbody class="nhsuk-table__body">
         <tr role="row" class="nhsuk-table__row">
           <td class="nhsuk-table__cell">VPM</td>
-          <td class="nhsuk-table__cell ">Dictionary</td>
+          <td class="nhsuk-table__cell ">Name</td>
           <td class="nhsuk-table__cell ">Equal to</td>
-          <td class="nhsuk-table__cell ">PCDD</td>
+          <td class="nhsuk-table__cell ">%Sulphate</td>
+          <td class="nhsuk-table__cell ">Between</td>
+          <td class="nhsuk-table__cell ">01 January 2015</td>
+          <td class="nhsuk-table__cell ">31 December 2015</td>
           <!--this edit will take the user to the start of the edit journey  -->
           <td class="nhsuk-table__cell "><a href="edit-dictionary.html">Edit</a></td>
         </tr>
@@ -58,6 +70,10 @@
           <td class="nhsuk-table__cell ">Invalid status</td>
           <td class="nhsuk-table__cell ">Equal to</td>
           <td class="nhsuk-table__cell ">Valid</td>
+          <td class="nhsuk-table__cell ">
+          </td>
+          <td class="nhsuk-table__cell "></td>
+          <td class="nhsuk-table__cell "></td>
           <!--this edit will take the user to the start of the edit journey  -->
           <td class="nhsuk-table__cell "><a href="edit-dictionary.html">Edit</a></td>
         </tr>
@@ -120,7 +136,7 @@
       <div class="nhsuk-radios">
 
         <div class="nhsuk-radios__item">
-          <input class="nhsuk-radios__input" id="example-1" name="example" type="radio" value="choose-dictionary.html">
+          <input class="nhsuk-radios__input" id="example-1" name="example" type="radio" value="new-query-summary-page.html">
           <label class="nhsuk-label nhsuk-radios__label" for="example-1">
             All months
           </label>
@@ -151,14 +167,14 @@
     const button = document.getElementById('save-continue');
 
     button.addEventListener('click', () => {
-      // Find the selected radio button
+
       const selectedRadio = document.querySelector('.nhsuk-radios__input:checked');
 
       if (selectedRadio) {
-        // Redirect to the URL specified in the value attribute
+
         window.location.href = selectedRadio.value;
       } else {
-        // Alert or handle case where no option is selected
+
         alert('Please select an option before continuing.');
       }
     });
