--- a/templates/user-designed-query/new-query-summary-page.html
+++ b/templates/user-designed-query/new-query-summary-page.html
@@ -68,6 +68,15 @@
             Criteria
           </th>
           <th role="columnheader" class="" scope="col">
+            Between/starts between
+          </th>
+          <th role="columnheader" class="" scope="col">
+            Start date
+          </th>
+          <th role="columnheader" class="" scope="col">
+            End date </th>
+
+          <th role="columnheader" class="" scope="col">
             Action
           </th>
         </tr>
@@ -75,9 +84,12 @@
         <tbody class="nhsuk-table__body">
         <tr role="row" class="nhsuk-table__row">
           <td class="nhsuk-table__cell">VPM</td>
-          <td class="nhsuk-table__cell ">Dictionary</td>
+          <td class="nhsuk-table__cell ">Name</td>
           <td class="nhsuk-table__cell ">Equal to</td>
-          <td class="nhsuk-table__cell ">PCDD</td>
+          <td class="nhsuk-table__cell ">%Sulphate</td>
+          <td class="nhsuk-table__cell ">Between</td>
+          <td class="nhsuk-table__cell ">01 January 2015</td>
+          <td class="nhsuk-table__cell ">31 December 2015</td>
           <!--this edit will take the user to the start of the edit journey  -->
           <td class="nhsuk-table__cell "><a href="edit-search-criteria-query.html">Edit</a></td>
         </tr>
@@ -86,12 +98,19 @@
           <td class="nhsuk-table__cell ">Invalid status</td>
           <td class="nhsuk-table__cell ">Equal to</td>
           <td class="nhsuk-table__cell ">Valid</td>
+          <td class="nhsuk-table__cell ">
+          </td>
+          <td class="nhsuk-table__cell "></td>
+          <td class="nhsuk-table__cell "></td>
           <!--this edit will take the user to the start of the edit journey  -->
           <td class="nhsuk-table__cell "><a href="edit-dictionary.html">Edit</a></td>
         </tr>
         </tbody>
       </table>
     </div>
+
+
+
     <!--search display view-->
     <div class="nhsuk-do-dont-list">
       <h3 class="nhsuk-do-dont-list__label">Search display view</h3>
@@ -321,12 +340,12 @@
           <fieldset class="nhsuk-fieldset" aria-describedby="example-hint">
             <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
               <h1 class="nhsuk-fieldset__heading">
-                Hide internal products.
+                Hide internal attributes.
               </h1>
             </legend>
 
             <div class="nhsuk-hint" id="example-hint">
-              You can choose to hide internal products from your search results.
+              You can choose to hide internal attributes from your search results.
             </div>
 
             <div class="nhsuk-checkboxes">
@@ -334,7 +353,7 @@
               <div class="nhsuk-checkboxes__item">
                 <input class="nhsuk-checkboxes__input" id="example-1" name="example" type="checkbox" value="email">
                 <label class="nhsuk-label nhsuk-checkboxes__label" for="example-1">
-                  Internal
+                  Hide internal attributes
                 </label>
               </div>
 
@@ -403,7 +422,7 @@
 
       <div class="nhsuk-hint" id="contact-hint">
         If you need to make changes to the dictionary you can
-        <a href="#">
+        <a href="choose-dictionary.html">
           edit, add or remove the dictionary here
         </a>.
       </div>
