--- a/templates/user-designed-query/save-query-summary.html
+++ b/templates/user-designed-query/save-query-summary.html
@@ -62,6 +62,25 @@ summar{% extends "base.html" %}
 
       </dl>
 
+      <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
+        <h2 class="nhsuk-fieldset__heading">Share query
+        </h2>
+      </legend>
+
+      <dl class="nhsuk-summary-list">
+
+        <div class="nhsuk-summary-list__row">
+          <dt class="nhsuk-summary-list__key">
+            Share choice
+          </dt>
+          <dd class="nhsuk-summary-list__value">
+            Share
+          </dd>
+
+        </div>
+
+      </dl>
+
     </div>
 
     <!--search criteria view -->
@@ -84,15 +103,26 @@ summar{% extends "base.html" %}
           <th role="columnheader" class="" scope="col">
             Criteria
           </th>
-
+          <th role="columnheader" class="" scope="col">
+            Between/starts between
+          </th>
+          <th role="columnheader" class="" scope="col">
+            Start date
+          </th>
+          <th role="columnheader" class="" scope="col">
+            End date </th>
         </tr>
         </thead>
         <tbody class="nhsuk-table__body">
         <tr role="row" class="nhsuk-table__row">
           <td class="nhsuk-table__cell">VPM</td>
-          <td class="nhsuk-table__cell ">Dictionary</td>
+          <td class="nhsuk-table__cell ">Name</td>
           <td class="nhsuk-table__cell ">Equal to</td>
-          <td class="nhsuk-table__cell ">PCDD</td>
+          <td class="nhsuk-table__cell ">%Sulphate</td>
+          <td class="nhsuk-table__cell ">Between</td>
+          <td class="nhsuk-table__cell ">01 January 2015</td>
+          <td class="nhsuk-table__cell ">31 December 2015</td>
+          <!--this edit will take the user to the start of the edit journey  -->
 
         </tr>
         <tr role="row" class="nhsuk-table__row">
@@ -100,6 +130,11 @@ summar{% extends "base.html" %}
           <td class="nhsuk-table__cell ">Invalid status</td>
           <td class="nhsuk-table__cell ">Equal to</td>
           <td class="nhsuk-table__cell ">Valid</td>
+          <td class="nhsuk-table__cell ">
+          </td>
+          <td class="nhsuk-table__cell "></td>
+          <td class="nhsuk-table__cell "></td>
+          <!--this edit will take the user to the start of the edit journey  -->
 
         </tr>
         </tbody>
