--- a/templates/tce-2384/update-ingredient-add.html
+++ b/templates/tce-2384/update-ingredient-add.html
@@ -8,11 +8,11 @@
 
 <div>
   <nav aria-label="Back link" class="nhsuk-back-link nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0">
-    <a class="nhsuk-back-link__link" href="/tce-2384/update-ingredient" id="back-link">
+    <a class="nhsuk-back-link__link" href="/tce-2384/update-ingredient-add-snomed" id="back-link">
       <svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__chevron-left" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
         <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
       </svg>
-      Go back to update associated ingredients
+      Go back to snomed associated ingredients
     </a>
     
   </nav>
@@ -26,7 +26,15 @@
           <input type="hidden" name="_csrf" value="okhXO15wlFE62PNzN1wg_N4BVHAXXGTIjF70_VBZa8SZqXO7knllDWgV9TUX78FDU3EUzOdneUgmZFbl7W-WmzFsX_b8mhCC">
           <h1 class="nhsuk-heading-xl nhsuk-u-margin-bottom-5" id="page-heading">Ingredient search</h1>
 
-          
+          <div class="nhsuk-warning-callout">
+            <h3 class="nhsuk-warning-callout__label">
+              <span role="text">
+                <span class="nhsuk-u-visually-hidden">Important: </span>
+                Warning
+              </span>
+            </h3>
+            <p>You are about to update a VTM with an ingredient outside of SNOMED assigned values</p>
+          </div>
 
           <div class="nhsuk-form-group autocomplete-wrapper nhsuk-u-width-full" id="autocomplete-results__form-group">
             <label class="nhsuk-label" for="search-term">Search term</label>
