Resolved merge conflicts

--- a/templates/user-designed-query/set-search-criteria-level.html
+++ b/templates/user-designed-query/set-search-criteria-level.html
@@ -20,7 +20,7 @@
       </h1>
     </legend>
 
-    <details class="nhsuk-details nhsuk-expander">
+    <details class="nhsuk-details">
       <summary class="nhsuk-details__summary">
     <span class="nhsuk-details__summary-text">
       Important default settings notification
