--- a/templates/user-designed-query/summary-page-save-query.html
+++ b/templates/user-designed-query/summary-page-save-query.html
@@ -239,7 +239,7 @@
     const selected = document.querySelector('input[name="example"]:checked');
     if (selected) {
       if (selected.value === "yes") {
-        window.location.href = "save-query-add-note.html";
+        window.location.href = "save-query-choose-category.html";
       } else if (selected.value === "no") {
         window.location.href = "home-page.html";
       }
