--- a/templates/user-designed-query/save-query-add-note.html
+++ b/templates/user-designed-query/save-query-add-note.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="nhsuk-back-link nhsuk-u-margin-bottom-6">
-  <a class="nhsuk-back-link__link" href="save-query-add-cipher.html">
+  <a class="nhsuk-back-link__link" href="save-query-choose-category.html">
     <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
          aria-hidden="true" height="24" width="24">
       <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
     </svg>
-    <span id="back-link-text">Go back to save query add cipher  </span></a>
+    <span id="back-link-text">Go back to Choose category</span></a>
 </div>
 
 
@@ -30,11 +30,9 @@
       <p>Your user ID (Cipher) and today's date will be saved automatically by default. </p>
       <p>Your UDQ will be kept private unless you choose to share it.</p>
     </div>
-<!--    <div class="nhsuk-inset-text">-->
-<!--      <span class="nhsuk-u-visually-hidden">Information: </span>-->
+     <span class="nhsuk-u-visually-hidden">Information: </span>
 
-<!--      <p>Your user ID (Cipher) and today's date will be saved automatically by default </p>-->
-<!--    </div>-->
+
     <div class="nhsuk-form-group">
 
       <fieldset class="nhsuk-fieldset" aria-describedby="example-hint">
