--- a/templates/user-designed-query/extra-large-data-table.html
+++ b/templates/user-designed-query/extra-large-data-table.html
@@ -2384,7 +2384,7 @@
               Devices
             </td>
             <td role="cell" class="nhsuk-table__cell" data-label="Colour">
-              Blue Berry
+              BlueBerry
             </td>
             <td role="cell" class="nhsuk-table__cell" data-label="Product order number">
               <span aria-hidden="true"></span>
@@ -3847,7 +3847,7 @@
               Devices
             </td>
             <td role="cell" class="nhsuk-table__cell" data-label="Colour">
-              Cinnemon
+              Cinnamon
             </td>
             <td role="cell" class="nhsuk-table__cell" data-label="Product order number">
               <span aria-hidden="true"></span>
