--- a/templates/user-designed-query/Show-between.html
+++ b/templates/user-designed-query/Show-between.html
@@ -115,7 +115,7 @@
 </a>
 
 <button class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="#">
-  View results
+  Clear criteria
 </button>
 <script>
   function populateDateInputs() {
