--- a/templates/user-designed-query/set-search-criteria.html
+++ b/templates/user-designed-query/set-search-criteria.html
@@ -145,7 +145,7 @@
   </a>
 
   <button class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="#">
-    View results
+    Clear criteria
   </button>
 </div>
 
