--- a/templates/cat-m/changes-saved.html
+++ b/templates/cat-m/changes-saved.html
@@ -18,7 +18,7 @@
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
 
-        <h1>VMPPs updates successfully</h1>
+        <h1>VMPPs updated successfully</h1>
         <p>You have successfully updated prices for five hundred and sixty (560) VMPPs</p>
 
 
@@ -257,7 +257,25 @@
           </tbody>
         </table>
 
+        <br> 
 
+        <nav aria-label="Pagination Navigation">
+          <ul class="nhsuk-table-pagination" id="pagination">
+      
+            <li class="nhsuk-u-margin-right-3" id="linkFirst">&lt;&lt; first</li>
+            
+            <li id="linkPrevious">&lt; previous</li>
+            
+      
+            <li><span class="nhsuk-u-visually-hidden">Currently viewing </span><span id="pageNumber">Page 1 of 3</span></li>
+      
+            
+            <li id="linkNext"><a aria-label="Goto next page" href="#">next &gt;</a></li>
+            
+            <li id="linkLast" class="nhsuk-u-margin-left-3"><a aria-label="Goto last page" href="#">last &gt;&gt;</a></li>
+      
+          </ul>
+        </nav>
       </div>
     </div>
 
