--- a/templates/cat-m/file-error.html
+++ b/templates/cat-m/file-error.html
@@ -46,10 +46,14 @@
       <li>staff</li>
             </ul-->
   
-            <div class="nhsuk-form-group">
+            <div class="nhsuk-form-group nhsuk-form-group--error">
               <label class="nhsuk-label" for="file-upload-1">
                 Choose file from your device
               </label>
+              <span class="nhsuk-error-message" id="example-error">
+                <span class="nhsuk-u-visually-hidden">Error:</span> File must be in .xlsx format
+              </span>
+              
               <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file">
             </div>
   
