cat m error pages

--- a/templates/cat-m/changes-saved.html
+++ b/templates/cat-m/changes-saved.html
@@ -24,236 +24,182 @@
 
         <a class="nhsuk-button nhsuk-button--secondary" href="/update-index" role="button" draggable="false">Return to homepage</a>
         <table role="table" class="nhsuk-table-responsive">
-          <caption class="nhsuk-table__caption nhsuk-u-visually-hidden">Updated prices for Sandoz Ltd</caption>
+          <caption class="nhsuk-table__caption nhsuk-u-visually-hidden">Updated prices for products</caption>
           <thead role="rowgroup" class="nhsuk-table__head">
             <tr role="row">
-              <th role="columnheader" class="" scope="col">Name</th>
-              <th role="columnheader" class="" scope="col">Pack </th>
-              <th role="columnheader" class="" scope="col">Current price</th>
-              <th role="columnheader" class="" scope="col">New price</th>
-           
+              <th scope="col">Drug Name</th>
+              <th scope="col">Pack Size</th>
+              <th scope="col">Pack unit of measurement</th>
+              <th scope="col">Current price</th>
+              <th scope="col">New price</th>
             </tr>
           </thead>
           <tbody class="nhsuk-table__body">
-            <tr role="row" class="nhsuk-table__row">
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
-                  class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 250mg
-                  tablets</a>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Acamprosate 333mg gastro-resistant tablets
+                </a>
               </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>63 tablets
-              </td>
-               
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>1173 
-
-              </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1134  
-                      
-              </td>
-              
-
-
+              <td>168</td>
+              <td>tablet</td>
+              <td>2164</td>
+              <td>2180</td>
             </tr>
-            <tr role="row" class="nhsuk-table__row">
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
-                  class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 500mg
-                  tablets</a>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Acetazolamide 250mg tablets
+                </a>
               </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>48 
-                tablets
-              </td>
-            
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
-
-              </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
-                      
-              </td>
-              
-
+              <td>112</td>
+              <td>tablet</td>
+              <td>539</td>
+              <td>514</td>
             </tr>
-            <tr role="row" class="nhsuk-table__row">
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
-                  class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 500mg
-                  tablets</a>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Aciclovir 200mg tablets
+                </a>
               </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>48  
-                tablets
-              </td>
-            
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
-
-              </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
-                      
-              </td>
-              
+              <td>25</td>
+              <td>tablet</td>
+              <td>123</td>
+              <td>115</td>
             </tr>
-            <tr role="row" class="nhsuk-table__row">
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
-                  class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 500mg
-                  tablets</a>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Aciclovir 400mg tablets
+                </a>
               </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>48  
-                tablets
-              </td>
-            
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
-
-              </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
-                      
-              </td>
-              
-
+              <td>56</td>
+              <td>tablet</td>
+              <td>264</td>
+              <td>251</td>
             </tr>
-            <tr role="row" class="nhsuk-table__row">
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
-                  class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 500mg
-                  tablets</a>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Aciclovir 800mg tablets
+                </a>
               </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>48  
-                tablets
-              </td>
-            
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
-
-              </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
-                      
-              </td>
-              
-
+              <td>35</td>
+              <td>tablet</td>
+              <td>343</td>
+              <td>330</td>
             </tr>
-            <tr role="row" class="nhsuk-table__row">
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
-                  class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 500mg
-                  tablets</a>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Alendronic acid 70mg tablets
+                </a>
               </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>48  
-                tablets
-              </td>
-            
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
-
-              </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
-                      
-              </td>
-              
-
+              <td>4</td>
+              <td>tablet</td>
+              <td>95</td>
+              <td>86</td>
             </tr>
-            <tr role="row" class="nhsuk-table__row">
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
-                  class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 500mg
-                  tablets</a>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Alfuzosin 2.5mg tablets
+                </a>
               </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>48  
-                tablets
-              </td>
-            
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
-
-              </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
-                      
-              </td>
-              
-
+              <td>60</td>
+              <td>tablet</td>
+              <td>130</td>
+              <td>126</td>
             </tr>
-            <tr role="row" class="nhsuk-table__row">
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
-                  class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 500mg
-                  tablets</a>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Allopurinol 100mg tablets
+                </a>
               </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>48  
-                tablets
-              </td>
-            
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
-
-              </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
-                      
-              </td>
-              
-
+              <td>28</td>
+              <td>tablet</td>
+              <td>75</td>
+              <td>66</td>
             </tr>
-            <tr role="row" class="nhsuk-table__row">
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
-                  class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 500mg
-                  tablets</a>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Allopurinol 300mg tablets
+                </a>
               </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>48  
-                tablets
-              </td>
-            
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
-
-              </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
-                      
-              </td>
-              
+              <td>28</td>
+              <td>tablet</td>
+              <td>99</td>
+              <td>91</td>
             </tr>
-            <tr role="row" class="nhsuk-table__row">
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Name</span><a href="#"
-                  class="nhsuk-link nhsuk-link--no-visited-state">Azithromycin 500mg
-                  tablets</a>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Amantadine 100mg capsules
+                </a>
               </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Pack size</span>48  
-                tablets
-              </td>
-            
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">Current price</span>2343 
-
-              </td>
-              <td role="cell" class="nhsuk-table__cell">
-                <span class="nhsuk-table-responsive__heading" aria-hidden="true">New price</span>1234  
-                      
-              </td>
-              
+              <td>56</td>
+              <td>capsule</td>
+              <td>619</td>
+              <td>621</td>
             </tr>
-
-
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Amiloride 5mg tablets
+                </a>
+              </td>
+              <td>28</td>
+              <td>tablet</td>
+              <td>1340</td>
+              <td>1673</td>
+            </tr>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Amiodarone 200mg tablets
+                </a>
+              </td>
+              <td>28</td>
+              <td>tablet</td>
+              <td>185</td>
+              <td>178</td>
+            </tr>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Amisulpride 100mg tablets
+                </a>
+              </td>
+              <td>60</td>
+              <td>tablet</td>
+              <td>1376</td>
+              <td>1289</td>
+            </tr>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Amisulpride 200mg tablets
+                </a>
+              </td>
+              <td>60</td>
+              <td>tablet</td>
+              <td>2604</td>
+              <td>2437</td>
+            </tr>
+            <tr>
+              <td>
+                <a href="#" class="nhsuk-link nhsuk-link--no-visited-state">
+                  Amisulpride 50mg tablets
+                </a>
+              </td>
+              <td>60</td>
+              <td>tablet</td>
+              <td>1033</td>
+              <td>988</td>
+            </tr>
           </tbody>
         </table>
 
