--- a/templates/part-8b/index.html
+++ b/templates/part-8b/index.html
@@ -27,7 +27,7 @@
         <div class="nhsuk-grid-row">
   
           <div class="nhsuk-grid-column-full">
-            <p class="nhsuk-body">File must be saved in .xlsx format and contain a table the following columns</p>
+            <p class="nhsuk-body">File must be saved in .xlsx format and contain a table with the following columns</p>
             <ul class="nhsuk-list nhsuk-list--bullet">
       <li>VMPP code</li>
       <li> VMP code</li>
